Added audio player and moved files

--- a/app/src/main/res/layout/ar_core_layout.xml
+++ b/app/src/main/res/layout/ar_core_layout.xml
@@ -3,4 +3,4 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/fragment_container_view"
-    android:name="com.example.showplaceproject.ar.CustomArFragment"/>
+    android:name="com.example.showplaceproject.presentation.ar.CustomArFragment"/>
